[gd_scene load_steps=3 format=3 uid="uid://dp084awpv5rtu"]

[ext_resource type="Script" path="res://scripts/multiplayer_control.gd" id="1_lkges"]
[ext_resource type="PackedScene" uid="uid://dr6dyb4oesqt" path="res://scenes/player.tscn" id="2_v10s1"]

[node name="Multiplayer Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lkges")
player_scene = ExtResource("2_v10s1")

[node name="Start Button" type="Button" parent="."]
visible = false
offset_left = 403.0
offset_top = 79.0
offset_right = 499.0
offset_bottom = 110.0
text = "Start Game"

[node name="Host Button" type="Button" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 78.0
offset_right = 263.0
offset_bottom = 109.0
text = "Host Game"

[node name="Join Button" type="Button" parent="."]
layout_mode = 0
offset_left = 291.0
offset_top = 79.0
offset_right = 299.0
offset_bottom = 87.0
text = "Join Game"

[connection signal="pressed" from="Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Host Button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Join Button" to="." method="_on_join_button_pressed"]
